--- a/.github/workflows/documentation-only.yml
+++ b/.github/workflows/documentation-only.yml
@@ -53,53 +53,14 @@ jobs:
       # Check out the files
       - uses: actions/checkout@v2
 
-      # Get the current date and time, in the timezone specified above, for use later.
-      - name: Get current date and time
-        id: date
-        run: echo "::set-output name=date::$(TZ='${{ env.Timezone }}' date +'%Y-%m-%d %T')"
-
-      # Do a string replacement in the schematic file to set the version and date.
-      # Any instance of %%version%% in the schematic gets replaced with the release version.
-      # Any instance of %%date%% in the schematic gets replaced with the release date and time.
-      - name: Set schematic version
-        uses: jacobtomlinson/gha-find-replace@master
-        with:
-          include: ".*.sch"
-          find: "%%version%%"
-          replace: ${{ github.event.inputs.version }}
-
-      - name: Set schematic date
-        uses: jacobtomlinson/gha-find-replace@master
-        with:
-          include: ".*.sch"
-          find: "%%date%%"
-          replace: ${{ steps.date.outputs.date }}
-
-      # Do a string replacement in the PCB file to set the version and date.
-      # Any instance of %%version%% in the schematic gets replaced with the release version.
-      # Any instance of %%date%% in the schematic gets replaced with the release date and time.
-      - name: Set PCB version
-        uses: jacobtomlinson/gha-find-replace@master
-        with:
-          include: ".*.kicad_pcb"
-          find: "%%version%%"
-          replace: ${{ github.event.inputs.version }}
-
-      - name: Set PCB date
-        uses: jacobtomlinson/gha-find-replace@master
-        with:
-          include: ".*.kicad_pcb"
-          find: "%%date%%"
-          replace: ${{ steps.date.outputs.date }}
-
       # Actually run KiBot to generate all the files. The KiBot script used is
       # in the .kibot/release.kibot.yaml folder.
       - name: Generate documentation
-        uses: INTI-CMNB/KiBot@v1
+        uses: INTI-CMNB/KiBot@v1_k6
         with:
           config: .kibot/documentation-only.kibot.yaml
           dir: ${{ env.OutputFolder }}
-          schema: ${{ github.event.repository.name }}.sch
+          schema: ${{ github.event.repository.name }}.kicad_sch
           board: ${{ github.event.repository.name }}.kicad_pcb
 
       # Archive all the artifacts from output and attach to the action's results.
