--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -41,8 +41,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Run KiBot with the preflight script
-      - uses: INTI-CMNB/KiBot@v1
+      - uses: INTI-CMNB/KiBot@v1_k6
         with:
           config: .kibot/preflight.kibot.yaml
-          schema: ${{ github.event.repository.name }}.sch
+          schema: ${{ github.event.repository.name }}.kicad_sch
           board: ${{ github.event.repository.name }}.kicad_pcb
